@@ -1,1 +1,30 @@
-<li><a href="ftp://ftp.debian.org/debian/pool/main/l/lilypond/">Debian GNU/Linux</a> usually has the latest binaries for the most useful stable
+
+LilyPond is included in Debian, so running
+<blockquote>
+  apt-get update
+  apt-get install lilypond lilypond-doc
+</blockquote>
+should install LilyPond for you.
+
+If you are re running testing or unstable, you should get the latest
+and greatest.  If not, you can file a wish list bug (New upstream
+release).
+
+If you are running woody (stable), see below.
+
+
+<ul>
+  <li><a href="ftp://ftp.debian.org/debian/pool/main/l/lilypond/">Debian GNU/Linux</a>
+</ul>
+
+<h1>Contributed packages:</h1>
+
+<h2>Woody</h2>
+
+<ul>
+  <li> http://serpent.laymusic.org/~lconrad/lilypond/lilypond_1.6.9-1_i386.deb 
+</ul>
+
+
+
+
